--- a/tex/repo.tex
+++ b/tex/repo.tex
@@ -276,7 +276,7 @@
     {\UrlHighlight{url hi}{#5}}
     {\UrlHighlight{url}{#5}}}
   \AutomaticCoordinates{c}{#3}
-  \node[remote label, anchor=#2] at (c) {\Code{https://gitlab.com/\account/\name}};
+  \node[remote label, anchor=#2] at (c) {\Code{https://codeberg.org/\account/\name}};
 }}
 
 
